--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,21 @@
     "jyggen/curl": "4.0.x-dev",
     "illuminate/support": "5.1.*|5.2.*"
   },
+  "require-dev": {
+    "phpunit/phpunit": "4.*",
+    "squizlabs/php_codesniffer": "~2.3"
+  },
   "autoload": {
     "psr-4": {
       "Atog\\Api\\": "src"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Atog\\Api\\Test\\": "tests"
+    }
+  },
+  "scripts": {
+    "test": "phpunit"
   }
 }
