--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "php": ">=5.5",
     "jyggen/curl": "4.0.x-dev",
-    "illuminate/support": "5.1.*|5.2.*"
+    "illuminate/support": "5.1.*|5.2.*",
+    "symfony/console": "^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "4.*",
